// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsPage should match snapshot and render EventDetail 1`] = `
<Translate(EventDetail)
  event={
    EventModel {
      "_address": "",
      "_allDay": true,
      "_availableLanguages": Object {
        "ar": "1236",
        "en": "1234",
      },
      "_content": "",
      "_endDate": "2017-11-18T19:30:00.000Z",
      "_excerpt": "",
      "_id": 1235,
      "_startDate": "2017-11-18T09:30:00.000Z",
      "_thumbnail": "",
      "_title": "erstes Event",
      "_town": "",
    }
  }
  language="en"
  location="augsburg"
/>
`;

exports[`EventsPage should match snapshot and render EventList 1`] = `
<Translate(EventList)
  events={
    Array [
      EventModel {
        "_address": "",
        "_allDay": true,
        "_availableLanguages": Object {
          "ar": "1236",
          "de": "1235",
        },
        "_content": "",
        "_endDate": "2017-11-18T19:30:00.000Z",
        "_excerpt": "",
        "_id": 1234,
        "_startDate": "2017-11-18T09:30:00.000Z",
        "_thumbnail": "",
        "_title": "first Event",
        "_town": "",
      },
      EventModel {
        "_address": "",
        "_allDay": true,
        "_availableLanguages": Object {
          "ar": "1236",
          "en": "1234",
        },
        "_content": "",
        "_endDate": "2017-11-18T19:30:00.000Z",
        "_excerpt": "",
        "_id": 1235,
        "_startDate": "2017-11-18T09:30:00.000Z",
        "_thumbnail": "",
        "_title": "erstes Event",
        "_town": "",
      },
      EventModel {
        "_address": "",
        "_allDay": true,
        "_availableLanguages": Array [],
        "_content": "",
        "_endDate": "2017-11-18T19:30:00.000Z",
        "_excerpt": "",
        "_id": 2,
        "_startDate": "2017-11-18T09:30:00.000Z",
        "_thumbnail": "",
        "_title": "second Event",
        "_town": "",
      },
    ]
  }
  language="en"
  url="/augsburg/en/events"
/>
`;

exports[`EventsPage should match snapshot and render Failure if event does not exist 1`] = `<Translate(Failure) />`;
